[project]
name = "analyzer_agents"
version = "0.1.0"
description = "analyzer-agents using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.203.1,<1.0.0",
    "pytest>=8.4.2",
    "yfinance>=0.2.66",
    "fastapi[standard]>=0.120.4"
]

[project.scripts]
analyzer_agents = "analyzer_agents.main:run"
run_crew = "analyzer_agents.main:run"
train = "analyzer_agents.main:train"
replay = "analyzer_agents.main:replay"
test = "analyzer_agents.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"

[tool.pytest.ini_options]
pythonpath = [
  "."
]